--- a/XXXindex.html
+++ b/XXXindex.html
@@ -5,7 +5,7 @@ Welcome to mokk731.github.io  Web
 
 大陆的网络审查辞汇列表（通常也称敏感词列表、过滤词列表） 新文字狱
 
-<a href="https://mokk731.github.io/mgclb.html/">敏感词列表</a> 
+<a href="https://mokk731.github.io/mgclb.html">敏感词列表</a> 
 
 
 https://mokk731.github.io/mgclb.html
