--- a/XXXindex.html
+++ b/XXXindex.html
@@ -1,3 +1,19 @@
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>mokk731.github.io</title>
+</head>
+<body>
+    <h1>我的第一个标题</h1>
+    <p>我的第一个段落。</p>
+</body>
+</html>
+
+
+
+
 Welcome to mokk731.github.io  Web
 
 新手吃鸡必看 绝地求生大逃杀53条生存指南
