--- a/XXXindex.html
+++ b/XXXindex.html
@@ -6,8 +6,13 @@
 <title>mokk731.github.io</title>
 </head>
 <body>
-    <h1>我的第一个标题</h1>
-    <p>我的第一个段落。</p>
+    <h1>Welcome to mokk731 Web</h1>
+    <p>新手吃鸡必看 绝地求生大逃杀53条生存指南
+
+
+大陆的网络审查辞汇列表（通常也称敏感词列表、过滤词列表） 新文字狱
+
+<a href="https://mokk731.github.io/mgclb.txt">敏感词列表</a> </p>
 </body>
 </html>
 
