--- a/XXXindex.html
+++ b/XXXindex.html
@@ -9,7 +9,7 @@
     <h1>Welcome to mokk731 Web</h1>
     <p>新手吃鸡必看 绝地求生大逃杀53条生存指南</p>
 
-    <p><a href="https://mokk731.github.io/README.md">新手吃鸡必看 绝地求生大逃杀53条生存指南</a></p>
+    <p><a href="https://mokk731.github.io/xscj.html">新手吃鸡必看 绝地求生大逃杀53条生存指南</a></p>
     
     
     ------------------------------------
@@ -31,17 +31,3 @@
 </body>
 </html>
 
-
-
-
-Welcome to mokk731.github.io  Web
-
-新手吃鸡必看 绝地求生大逃杀53条生存指南
-
-
-大陆的网络审查辞汇列表（通常也称敏感词列表、过滤词列表） 新文字狱
-
-<a href="https://mokk731.github.io/mgclb.txt">敏感词列表</a> 
-
-
-https://mokk731.github.io/mgclb.html
