--- a/xscj.html
+++ b/xscj.html
@@ -39,77 +39,77 @@
 
 <p>16、麦田决战圈的话把衣服裤子背包平底锅脱了，饮料全喝了，绷带扔了就留急救包，步枪子弹留30-50发就够了(不算已上膛的)，冲锋枪也只留一点，烟雾、手雷各留两三个(可根据当时不背包的情况下容量进行调整)，手雷预判炸人，最后刷区不在自己这提前15秒扔烟雾(自己要跑的路线上扔两个，再扔一个到另一边迷惑对手)，震爆弹也可以留一个，最后小圈扔了再跑。</p>
 
-<p>17、不要小看投掷武器，最后决战/攻楼/无障碍物穿越的时候都很有用。
+<p>17、不要小看投掷武器，最后决战/攻楼/无障碍物穿越的时候都很有用。</p>
 
-<p>18、三级包不要拿，两级就够了。背起来容易，脱下来难，不过四排的话给一个枪法不好的后勤兵背着也可以。
+<p>18、三级包不要拿，两级就够了。背起来容易，脱下来难，不过四排的话给一个枪法不好的后勤兵背着也可以。</p>
 
-<p>19、一级头是原谅色和土灰色，二级头是海洋迷彩和沙漠迷彩，三级头就一个造型;一级防弹衣是蓝色迷彩和白色迷彩，二级防弹衣是黑色的，三级防弹衣是沙漠迷彩;两级背包也分绿色和暗绿色。
+<p>19、一级头是原谅色和土灰色，二级头是海洋迷彩和沙漠迷彩，三级头就一个造型;一级防弹衣是蓝色迷彩和白色迷彩，二级防弹衣是黑色的，三级防弹衣是沙漠迷彩;两级背包也分绿色和暗绿色。</p>
 
-<p>20、只有一个扩容弹夹情况下，装在s12k上比装在自动步枪上效果更好。
+<p>20、只有一个扩容弹夹情况下，装在s12k上比装在自动步枪上效果更好。</p>
 
-<p>21、霰弹枪不要机瞄(单击右键)，用第三人称瞄准(按住右键)。
+<p>21、霰弹枪不要机瞄(单击右键)，用第三人称瞄准(按住右键)。</p>
 
-<p>22、只有腰包、防弹衣、背包加容量，防弹衣不同等级加的容量都是一样。
+<p>22、只有腰包、防弹衣、背包加容量，防弹衣不同等级加的容量都是一样。</p>
 
-<p>23、垂直握把要比三角握把好一点(虽然游戏里都叫垂直握把，但是外观是完全不同)。
+<p>23、垂直握把要比三角握把好一点(虽然游戏里都叫垂直握把，但是外观是完全不同)。</p>
 
-<p>24、扼流圈(最新版已经改名为“枪口收束器”)的作用参考守望先锋路霸。
+<p>24、扼流圈(最新版已经改名为“枪口收束器”)的作用参考守望先锋路霸。</p>
 
-<p>25、单人四排被老外队友杀了自己然后捡自己装备?先在队伍语音频道放歌吵死他，然后过一会他就该关语音频道了，然后你切全体频道继续放歌把敌人引过来。
+<p>25、单人四排被老外队友杀了自己然后捡自己装备?先在队伍语音频道放歌吵死他，然后过一会他就该关语音频道了，然后你切全体频道继续放歌把敌人引过来。</p>
 
-<p>26、狙击枪打人的时候，第一枪打完按住别放，看看子弹落点和自己预判的差多少，在心里纠正一下，第二枪才是真正开始表演技术的时候。
+<p>26、狙击枪打人的时候，第一枪打完按住别放，看看子弹落点和自己预判的差多少，在心里纠正一下，第二枪才是真正开始表演技术的时候。</p>
 
-<p>27、子弹受飞行时间和重力的影响，对于射击远处目标的时候，需要打提前量和抬高枪口。
+<p>27、子弹受飞行时间和重力的影响，对于射击远处目标的时候，需要打提前量和抬高枪口。</p>
 
-<p>28、野外无障碍物情况下被射击了就收枪用蓝蝶划云游身步跑吧29、车在安全区里翻了?那就换到后座躲起来吧。
+<p>28、野外无障碍物情况下被射击了就收枪用蓝蝶划云游身步跑吧29、车在安全区里翻了?那就换到后座躲起来吧。</p>
 
-<p>30、最危险的不是山顶也不是山脚，而且位于半坡中。
+<p>30、最危险的不是山顶也不是山脚，而且位于半坡中。</p>
 
-<p>31、进到房间看到一个急救包别急着捡，先清一下门后。
+<p>31、进到房间看到一个急救包别急着捡，先清一下门后。</p>
 
-<p>32、出机舱马上开伞，速度维持40左右，飘2000+米没问题。
+<p>32、出机舱马上开伞，速度维持40左右，飘2000+米没问题。</p>
 
-<p>33、路边随机刷车，车库大概率刷车(以前是百分百)。
+<p>33、路边随机刷车，车库大概率刷车(以前是百分百)。</p>
 
-<p>34、边跑边看背包默认是按不出来的(shift+tab)，默认是按出了steam社区，steam设置里改一下就可以了。
+<p>34、边跑边看背包默认是按不出来的(shift+tab)，默认是按出了steam社区，steam设置里改一下就可以了。</p>
 
-<p>35、遇到黄昏很好看想截图?按住ctrl+U隐藏所有界面，F12截图。
+<p>35、遇到黄昏很好看想截图?按住ctrl+U隐藏所有界面，F12截图。</p>
 
-<p>36、善用q和e，不过要多练习，不然头伸出去的枪管没伸出去然后被爆头就尴尬了(就是我)。
+<p>36、善用q和e，不过要多练习，不然头伸出去的枪管没伸出去然后被爆头就尴尬了(就是我)。</p>
 
-<p>37、在楼宇中，不穿鞋比穿鞋发出的声音小。不穿鞋声音是：沓沓沓(类似鱼尾巴拍地上)，穿鞋子：咚咚咚!!
+<p>37、在楼宇中，不穿鞋比穿鞋发出的声音小。不穿鞋声音是：沓沓沓(类似鱼尾巴拍地上)，穿鞋子：咚咚咚!!</p>
 
-<p>38、相邻的学区房(宿舍)可以在楼顶助跑跳到隔壁学区房，学区房楼顶可以跳到一楼门口的顶部，跳得好不掉血。
+<p>38、相邻的学区房(宿舍)可以在楼顶助跑跳到隔壁学区房，学区房楼顶可以跳到一楼门口的顶部，跳得好不掉血。</p>
 
-<p>39、周围房子门都开了，就一栋房子门关的，要小心了。
+<p>39、周围房子门都开了，就一栋房子门关的，要小心了。</p>
 
-<p>40、一般来说物资很肥的几个地方：餐厅，仓库，谷仓。
+<p>40、一般来说物资很肥的几个地方：餐厅，仓库，谷仓。</p>
 
-<p>41、G港集装箱是上面多物资，N港集装箱是一层集装箱里多物资。
+<p>41、G港集装箱是上面多物资，N港集装箱是一层集装箱里多物资。</p>
 
-<p>42、安全区还在海里的可以开船到一些礁石后面，15倍镜都打不到你。
+<p>42、安全区还在海里的可以开船到一些礁石后面，15倍镜都打不到你。</p>
 
-<p>43、设置里的可视距离对看人没有任何影响。
+<p>43、设置里的可视距离对看人没有任何影响。</p>
 
-<p>44、不要在半坡上爬来爬去，设置调得好的人一眼就看到你。
+<p>44、不要在半坡上爬来爬去，设置调得好的人一眼就看到你。</p>
 
-<p>45、P城三层红房子可以当蜘蛛侠。
+<p>45、P城三层红房子可以当蜘蛛侠。</p>
 
-<p>46、一开始只敢跳小地方的萌新，多点组团去学校干，慢慢就敢跳大城市了。
+<p>46、一开始只敢跳小地方的萌新，多点组团去学校干，慢慢就敢跳大城市了。</p>
 
-<p>47、学校的物资没有你想象中的多。
+<p>47、学校的物资没有你想象中的多。</p>
 
-<p>48、瞄准镜射击的时候按shift可以屏息射击，不屏息的情况下你会发现准心会随着角色的呼吸而产生轻微移动。
+<p>48、瞄准镜射击的时候按shift可以屏息射击，不屏息的情况下你会发现准心会随着角色的呼吸而产生轻微移动。</p>
 
-<p>49、不要看到轰炸区就赶紧躲起来，该干嘛干嘛，炸到你你就是天谴之人这是命运的选择。
+<p>49、不要看到轰炸区就赶紧躲起来，该干嘛干嘛，炸到你你就是天谴之人这是命运的选择。</p>
 
-<p>50、四排的话，看到有车来了可以一起扫，一会就炸了，四盒一，美滋滋。
+<p>50、四排的话，看到有车来了可以一起扫，一会就炸了，四盒一，美滋滋。</p>
 
-<p>51、原地扔烟雾：拉开烟雾弹不要扔，直接切回拿枪。
+<p>51、原地扔烟雾：拉开烟雾弹不要扔，直接切回拿枪。</p>
 
-<p>52、轰炸时不要贴近窗户。
+<p>52、轰炸时不要贴近窗户。</p>
 
-<p>53、养成听到脚步立马看一下右下角小地图判断敌友的习惯(虽然也可能有同时存在敌友的情况，但是这种几率很小)。
+<p>53、养成听到脚步立马看一下右下角小地图判断敌友的习惯(虽然也可能有同时存在敌友的情况，但是这种几率很小)。</p>
   
 <p>我的第一个段落。</p>
 
