--- a/mgclb/mgclb3.html
+++ b/mgclb/mgclb3.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>mokk731.github.io</title>
+</head>
+<body>
+ 
+<h1>第三次严重警告，如果手机里已经安装,国家反诈中心app,MIUI13，等侦察隐私安全app，的朋友，请不要向下点链接，这次是真的，回头是岸!!!</h1>
+  
+  
+  
+  
+<p><a href="https://mokk731.github.io/mgclb.txt"><big>敏感词列表 新文字狱 点入前，请三思,请三思,请三思,重要的事情说三遍！</big></a> </p>
+  
 
+  
+  
+ 
+</body>
+</html>
