--- a/mgclb/mgclb1.html
+++ b/mgclb/mgclb1.html
@@ -12,7 +12,7 @@
   
   
   
-<p><a href="https://mokk731.github.io/mgclb2.html"><big>敏感词列表 新文字狱 点入前，请三思,请三思,请三思,重要的事情说三遍！</big></a> </p>
+<p><a href="https://mokk731.github.io/mgclb/mgclb2.html"><big>敏感词列表 新文字狱 点入前，请三思,请三思,请三思,重要的事情说三遍！</big></a> </p>
   
 
   
