--- a/mgclb/mgclb2.html
+++ b/mgclb/mgclb2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
  
-<h1>第二次严重警告，如果手机里已经安装,国家反诈中心app,MIUI13，等侦察隐私安全app，的朋友，请不要向下点链接</h1>
+<h1>第二次严重警告，如果手机里已经安装,国家反诈中心app,MIUI13，等侦察隐私安全app，的朋友，请不要向下点链接,后果严重!!!</h1>
   
   
   
