--- a/mgclb/mgclb2.html
+++ b/mgclb/mgclb2.html
@@ -11,7 +11,7 @@
   
   
   
-<p><a href="https://mokk731.github.io/mgclb/mgclb3.html"><big>敏感词列表 新文字狱 点入前，请三思,请三思,请三思,重要的事情说三遍！</big></a> </p>
+<p><a href="https://mokk731.github.io/mgclb/mgclb3.html"><big>敏感词列表 新时代文字狱。 点入前，请三思,请三思,请三思,重要的事情说三遍！！！</big></a> </p>
   
 
   
