--- a/html/xscj.html
+++ b/html/xscj.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>新手吃鸡必看 绝地求生大逃杀53条生存指南</h1>
-<img src="https://camo.githubusercontent.com/620e616481003bd53e2c779ff356e68f53e83d80ea3e1efb85bf22ccf07a6c14/687474703a2f2f6e657773696d672e353035343339392e636f6d2f75706c6f6164732f7573657275702f313731302f30393136313933363234422e6a7067" width="500" height="258" />
+<img src="https://mokk731.github.io/img/jdqs.jpg" width="500" height="258" />
 <p>对于很多刚刚玩绝地求生大逃杀的玩家来说，总是要先交点学费的。经过大神们的不断总结，如果能够先看看这些经验指南的话，上手会快很多，离吃鸡也会越来越近。</p>
 <p>1、在野外被打了，要立马根据枪声/火光/子弹着弹点反方向找掩体，最好不要原地趴下，趴下了80%都会死。</p>
 
