--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <p><a href="https://mokk731.github.io/md/2345"><big>对付2345.com流氓软件</big></a></p>
     
     <p><a href="https://mokk731.github.io/md/hardware-best"><big>最具性价比硬件</big></a></p>
+
+     <p><a href="https://mokk731.github.io/md/best-choice"><big>生活优选</big></a></p>
    
     <p>--------------------------------------------------------------------</p>
     
