--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     <p><a href="https://mokk731.github.io/txt/mydiy/adbhyperos.txt"><big>使用ADB卸载小米预装系统应用HyperOS</big></a></p>
     
     <p><a href="https://mokk731.github.io/md/2345"><big>对付2345.com流氓软件</big></a></p>
+
+    <p><a href="https://mokk731.github.io/md/360"><big>对付360流氓软件</big></a></p>
     
     <p><a href="https://mokk731.github.io/md/hardware-best"><big>最具性价比硬件</big></a></p>
 
